[gd_scene load_steps=23 format=3 uid="uid://352qqvck463h"]

[ext_resource type="Texture2D" uid="uid://c5wutmp2dsqdw" path="res://PNG/Backgrounds/set2_background.png" id="1_56vel"]
[ext_resource type="Script" path="res://level_2.gd" id="1_sowar"]
[ext_resource type="Texture2D" uid="uid://bd0y44odijwx5" path="res://PNG/Backgrounds/set1_tiles.png" id="2_6oec2"]
[ext_resource type="PackedScene" uid="uid://b8r2nm8mwje1d" path="res://tile_set.tscn" id="3_4mhjb"]
[ext_resource type="PackedScene" uid="uid://bbq44fucygc3m" path="res://player.tscn" id="4_brax3"]
[ext_resource type="PackedScene" uid="uid://bk7x1xytts86d" path="res://land_enemy.tscn" id="5_rtjp0"]
[ext_resource type="PackedScene" uid="uid://bbu46wyneymm0" path="res://land_enemy_2.tscn" id="6_dtmnt"]
[ext_resource type="PackedScene" uid="uid://dl5kbn8xka76c" path="res://crawling_enemy_2.tscn" id="7_gq6jw"]
[ext_resource type="PackedScene" uid="uid://d1rkm4ll0n6rg" path="res://walking_enemy.tscn" id="8_8u4y2"]
[ext_resource type="PackedScene" uid="uid://d0rgfg1vmbnxy" path="res://exit.tscn" id="10_ci7ti"]
[ext_resource type="Texture2D" uid="uid://b7ok574a83wg8" path="res://PNG/Enemies/enemySpikey_1.png" id="11_63p1w"]
[ext_resource type="Texture2D" uid="uid://rp7pa5q463nt" path="res://PNG/Enemies/enemySpikey_3.png" id="12_fkirr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b0c0l"]
size = Vector2(2792, 146)

[sub_resource type="SpriteFrames" id="SpriteFrames_p87w7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_63p1w")
}, {
"duration": 1.0,
"texture": ExtResource("12_fkirr")
}],
"loop": true,
"name": &"spike",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_dk22r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_63p1w")
}, {
"duration": 1.0,
"texture": ExtResource("12_fkirr")
}],
"loop": true,
"name": &"spike",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_rsyn7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_63p1w")
}, {
"duration": 1.0,
"texture": ExtResource("12_fkirr")
}],
"loop": true,
"name": &"spike",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_fsmfh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_63p1w")
}, {
"duration": 1.0,
"texture": ExtResource("12_fkirr")
}],
"loop": true,
"name": &"spike",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_u3ns7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_63p1w")
}, {
"duration": 1.0,
"texture": ExtResource("12_fkirr")
}],
"loop": true,
"name": &"spike",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_j86t1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_63p1w")
}, {
"duration": 1.0,
"texture": ExtResource("12_fkirr")
}],
"loop": true,
"name": &"spike",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ghtud"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_63p1w")
}, {
"duration": 1.0,
"texture": ExtResource("12_fkirr")
}],
"loop": true,
"name": &"spike",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_dwoul"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_63p1w")
}, {
"duration": 1.0,
"texture": ExtResource("12_fkirr")
}],
"loop": true,
"name": &"spike",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_g1eyq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_63p1w")
}, {
"duration": 1.0,
"texture": ExtResource("12_fkirr")
}],
"loop": true,
"name": &"spike",
"speed": 5.0
}]

[node name="Level 2" type="Node2D"]
script = ExtResource("1_sowar")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1280, 960)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Sky"]
scale = Vector2(2, 2)
texture = ExtResource("1_56vel")
centered = false

[node name="Blocks" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)
motion_mirroring = Vector2(1280, 760)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Blocks"]
scale = Vector2(2, 2)
texture = ExtResource("2_6oec2")
centered = false

[node name="Tile Set" parent="." instance=ExtResource("3_4mhjb")]
layer_0/tile_data = PackedInt32Array(1245184, 0, 6, 1245185, 0, 6, 1245186, 0, 6, 1245187, 0, 7, 1245188, 0, 6, 1245189, 0, 6, 1179649, 0, 6, 1114113, 0, 6, 1048577, 0, 6, 983041, 0, 6, 917505, 0, 6, 851969, 0, 6, 786433, 0, 7, 720897, 0, 6, 655361, 0, 6, 589825, 0, 6, 524289, 0, 6, 458753, 0, 6, 458752, 0, 6, 524288, 0, 8, 589824, 0, 6, 655360, 0, 6, 720896, 0, 6, 786432, 0, 6, 851968, 0, 6, 917504, 0, 6, 983040, 0, 8, 1048576, 0, 6, 1114112, 0, 6, 1179648, 0, 6, 393217, 0, 6, 327681, 0, 6, 262145, 0, 7, 196609, 0, 6, 131073, 0, 6, 65537, 0, 6, 1, 0, 6, 0, 0, 6, 65536, 0, 8, 131072, 0, 6, 196608, 0, 6, 262144, 0, 6, 327680, 0, 6, 393216, 0, 6, 1245223, 0, 6, 1245222, 0, 8, 1245199, 0, 7, 1245193, 0, 8, 1245192, 0, 6, 1245190, 0, 6, 1245191, 0, 6, 1179687, 0, 6, 1114151, 0, 6, 1048615, 0, 6, 983079, 0, 6, 917543, 0, 6, 852007, 0, 6, 786470, 0, 6, 720934, 0, 6, 655398, 0, 8, 589862, 0, 6, 524326, 0, 6, 458790, 0, 6, 458791, 0, 6, 393255, 0, 6, 327719, 0, 6, 262183, 0, 6, 196647, 0, 6, 131111, 0, 6, 65575, 0, 6, 39, 0, 6, 38, 0, 8, 65574, 0, 6, 131110, 0, 6, 196646, 0, 6, 262182, 0, 6, 327718, 0, 7, 393254, 0, 6, 720935, 0, 6, 655399, 0, 6, 589863, 0, 6, 524327, 0, 6, 786471, 0, 7, 1179686, 0, 6, 1114150, 0, 6, 1048614, 0, 6, 983078, 0, 7, 917542, 0, 6, 852006, 0, 6, 327683, 131072, 6, 327684, 131072, 6, 327682, 131072, 6, 327685, 131072, 6, 327686, 262144, 7, 1179650, 131072, 6, 1179651, 131072, 6, 1179652, 131072, 6, 1179653, 131072, 6, 1179654, 131072, 6, 1179655, 131072, 6, 1179656, 131072, 6, 1179657, 196608, 6, 1179663, 262144, 6, 1179669, 131072, 6, 1179670, 131072, 6, 1179671, 65536, 8, 1114135, 65536, 7, 1048600, 65536, 7, 983065, 65536, 7, 983066, 131072, 6, 983067, 131072, 6, 983068, 131072, 6, 983069, 131072, 7, 1048606, 131072, 7, 1114143, 131072, 7, 1114136, 65536, 8, 1048601, 65536, 8, 1048605, 131072, 8, 1114142, 131072, 8, 1179679, 131072, 8, 1179672, 0, 6, 1179673, 0, 6, 1114137, 0, 6, 1114138, 0, 6, 1048602, 0, 8, 1048603, 0, 6, 1048604, 0, 6, 1114140, 0, 6, 1114139, 0, 6, 1179675, 0, 7, 1179674, 0, 6, 1179676, 0, 6, 1114141, 0, 6, 1179677, 0, 6, 1179678, 0, 6, 1245215, 0, 6, 1245214, 0, 7, 1245213, 0, 6, 1245212, 0, 6, 1245211, 0, 6, 1245210, 0, 6, 1245209, 0, 6, 1245208, 0, 6, 1245207, 0, 8, 852000, 131072, 6, 852001, 131072, 6, 851999, 458752, 8, 720923, 458752, 7, 655382, 458752, 8, 655384, 524288, 8, 655383, 131072, 6, 720924, 524288, 7, 1179668, 131072, 6, 1179667, 458752, 8, 1245206, 0, 6, 1245205, 0, 6, 1245204, 0, 8, 852002, 524288, 8, 655376, 524288, 6, 589837, 524288, 6, 524298, 524288, 7, 524297, 131072, 6, 524296, 262144, 8, 458759, 262144, 8, 393222, 262144, 8, 458760, 262144, 7, 393223, 262144, 7, 524295, 0, 6, 524294, 0, 8, 524293, 0, 6, 524292, 0, 6, 524291, 0, 6, 524290, 0, 6, 458754, 0, 6, 393218, 0, 6, 393219, 0, 7, 393220, 0, 6, 393221, 0, 6, 458758, 0, 6, 458757, 0, 6, 458756, 0, 6, 458755, 0, 6, 1114117, 589824, 4, 1114121, 1048576, 10, 1114115, 655360, 5, 1114119, 655360, 6, 1114131, 655360, 4, 917531, 589824, 5, 786465, 720896, 4, 655388, 720896, 6, 1114134, 655360, 7, 589847, 720896, 5, 458762, 589824, 4, 262149, 589824, 5, 262147, 589824, 5, 262146, 720896, 4, 1310729, 0, 6, 1310728, 0, 6, 1310727, 0, 6, 1310726, 0, 6, 1310725, 0, 6, 1310724, 0, 6, 1310723, 0, 6, 1310722, 0, 6, 1310721, 0, 6, 1310720, 0, 6, 1310735, 0, 6, 1310740, 0, 6, 1310741, 0, 6, 1310742, 0, 6, 1310743, 0, 6, 1310744, 0, 6, 1310745, 0, 7, 1310746, 0, 6, 1310747, 0, 6, 1310748, 0, 6, 1310749, 0, 6, 1310751, 0, 6, 1310750, 0, 6, 1310758, 0, 6, 1310759, 0, 6, -65498, 0, 6, -131034, 0, 6, -196570, 0, 6, -262106, 0, 8, -327642, 0, 6, -327641, 0, 6, -262105, 0, 6, -196569, 0, 6, -131033, 0, 6, -65497, 0, 6, -65535, 0, 6, -131071, 0, 6, -196607, 0, 7, -262143, 0, 6, -327679, 0, 6, -327680, 0, 6, -262144, 0, 6, -196608, 0, 6, -131072, 0, 6, -65536, 0, 6, 1376271, 0, 6, 1376270, 0, 6, 1376269, 0, 6, 1376268, 0, 6, 1376267, 0, 6, 1376266, 0, 6, 1376265, 0, 6, 1376264, 0, 6, 1376263, 0, 6, 1376262, 0, 7, 1376261, 0, 6, 1376260, 0, 6, 1376259, 0, 6, 1376258, 0, 6, 1376272, 0, 6, 1376273, 0, 6, 1376274, 0, 6, 1376275, 0, 6, 1376276, 0, 6, 1376277, 0, 6, 1376278, 0, 6, 1376279, 0, 6, 1376280, 0, 6, 1376281, 0, 6, 1376282, 0, 6, 1376286, 0, 6, 1441821, 0, 6, 1507356, 0, 6, 1507355, 0, 6, 1572891, 0, 7, 1572890, 0, 6, 1638426, 0, 6, 1638425, 0, 6, 1703961, 0, 6, 1703960, 0, 6, 1703959, 0, 6, 1769495, 0, 8, 1769494, 0, 6, 1769493, 0, 6, 1769492, 0, 6, 1769491, 0, 6, 1703955, 0, 6, 1703954, 0, 6, 1703953, 0, 6, 1703952, 0, 6, 1703951, 0, 6, 1703950, 0, 6, 1703949, 0, 6, 1703948, 0, 6, 1703947, 0, 6, 1703946, 0, 6, 1703945, 0, 6, 1703944, 0, 6, 1769479, 0, 6, 1835014, 0, 6, 1835013, 0, 6, 1835012, 0, 6, 1835011, 0, 6, 1835010, 0, 6, 1835009, 0, 6, 1835008, 0, 8, 1900543, 0, 6, 1900542, 0, 6, 1835006, 0, 6, 1769470, 0, 6, 1703934, 0, 6, 1703933, 0, 6, 1638397, 0, 6, 1572861, 0, 6, 1507325, 0, 6, 1507324, 0, 6, 1441788, 0, 6, 1376252, 0, 7, 1376257, 0, 6, 1376256, 0, 6, 1441791, 0, 6, 1441790, 0, 8, 1441789, 0, 6, 1507326, 0, 6, 1572862, 0, 6, 1638398, 0, 6, 1703935, 0, 6, 1769471, 0, 7, 1703936, 0, 6, 1769473, 0, 6, 1769474, 0, 6, 1769475, 0, 6, 1769476, 0, 8, 1769477, 0, 6, 1769478, 0, 7, 1703942, 0, 6, 1703941, 0, 6, 1703940, 0, 6, 1703939, 0, 6, 1703938, 0, 6, 1703937, 0, 6, 1769472, 0, 6, 1835007, 0, 6, 1703943, 0, 6, 1507327, 0, 6, 1441792, 0, 6, 1441793, 0, 7, 1441794, 0, 6, 1441795, 0, 6, 1441796, 0, 6, 1441797, 0, 6, 1441798, 0, 6, 1441799, 0, 6, 1441800, 0, 6, 1441801, 0, 7, 1441802, 0, 6, 1441803, 0, 6, 1441804, 0, 8, 1441805, 0, 6, 1441806, 0, 6, 1441807, 0, 7, 1441808, 0, 6, 1507344, 0, 6, 1572880, 0, 6, 1638416, 0, 7, 1507345, 0, 6, 1441809, 0, 6, 1441813, 0, 8, 1441811, 0, 6, 1441810, 0, 6, 1572881, 0, 6, 1638417, 0, 6, 1441812, 0, 6, 1507336, 0, 6, 1572872, 0, 6, 1638408, 0, 8, 1638409, 0, 6, 1638410, 0, 6, 1638411, 0, 6, 1638412, 0, 6, 1638413, 0, 8, 1638414, 0, 6, 1638415, 0, 6, 1572879, 0, 6, 1507343, 0, 6, 1507342, 0, 6, 1507341, 0, 6, 1507340, 0, 6, 1507339, 0, 6, 1507338, 0, 6, 1507337, 0, 6, 1572873, 0, 6, 1572874, 0, 6, 1572875, 0, 7, 1572876, 0, 6, 1572877, 0, 6, 1572878, 0, 6, 1376285, 0, 6, 1376284, 0, 6, 1376283, 0, 6, 1441819, 0, 6, 1441820, 0, 6, 1441818, 0, 6, 1507353, 0, 7, 1572889, 0, 6, 1638424, 0, 6, 1638423, 0, 6, 1703958, 0, 6, 1703957, 0, 6, 1703956, 0, 7, 1638420, 0, 6, 1638419, 0, 6, 1572883, 0, 6, 1572882, 0, 6, 1507346, 0, 6, 1638418, 0, 6, 1572884, 0, 6, 1507348, 0, 6, 1507349, 0, 6, 1507347, 0, 7, 1572885, 0, 6, 1572886, 0, 7, 1572887, 0, 6, 1507351, 0, 6, 1507352, 0, 6, 1441816, 0, 6, 1441817, 0, 6, 1441815, 0, 6, 1441814, 0, 6, 1507350, 0, 6, 1638422, 0, 6, 1638421, 0, 6, 1572888, 0, 6, 1507354, 0, 6, 1376294, 0, 6, 1441830, 0, 6, 1507366, 0, 7, 1572902, 0, 6, 1638438, 0, 6, 1703974, 0, 6, 1638439, 0, 8, 1572903, 0, 6, 1572904, 0, 6, 1507368, 0, 6, 1507369, 0, 6, 1441833, 0, 6, 1441834, 0, 6, 1376298, 0, 6, 1376299, 0, 6, 1310763, 0, 6, 1310764, 0, 6, 1310765, 0, 6, 1245229, 0, 6, 1245230, 0, 6, 1179694, 0, 6, 1179693, 0, 7, 1179692, 0, 6, 1179691, 0, 6, 1179690, 0, 6, 1179689, 0, 6, 1179688, 0, 6, 1245224, 0, 6, 1376295, 0, 6, 1441831, 0, 6, 1507367, 0, 6, 1441832, 0, 6, 1376296, 0, 7, 1376297, 0, 6, 1310761, 0, 6, 1310762, 0, 6, 1245226, 0, 8, 1245227, 0, 6, 1245228, 0, 6, 1245225, 0, 6, 1310760, 0, 6, 1179695, 0, 6, 1114159, 0, 6, 1114160, 0, 6, 1048624, 0, 8, 1048625, 0, 6, 983089, 0, 6, 917553, 0, 6, 917554, 0, 6, 852018, 0, 6, 786482, 0, 6, 720946, 0, 6, 655410, 0, 6, 589874, 0, 6, 524338, 0, 6, 458802, 0, 6, -262104, 0, 6, -196568, 0, 6, -196567, 0, 6, -131031, 0, 6, -65495, 0, 6, -65494, 0, 6, 42, 0, 6, 43, 0, 6, 44, 0, 6, 65580, 0, 8, 65581, 0, 6, 65582, 0, 6, 131119, 0, 6, 196655, 0, 6, 196656, 0, 6, 262192, 0, 7, 262193, 0, 6, 327729, 0, 6, 327730, 0, 6, 393266, 0, 6, 852008, 0, 6, 852009, 0, 6, 852010, 0, 6, 852011, 0, 6, 852012, 0, 6, 852013, 0, 7, 917549, 0, 6, 983085, 0, 6, 983086, 0, 6, 1048622, 0, 6, 1048623, 0, 6, 983087, 0, 6, 917550, 0, 6, 917548, 0, 6, 917551, 0, 6, 983088, 0, 6, 917552, 0, 7, 852016, 0, 6, 852015, 0, 6, 852014, 0, 6, 786478, 0, 6, 786477, 0, 6, 786476, 0, 6, 786475, 0, 6, 786474, 0, 6, 786473, 0, 6, 786472, 0, 6, 786479, 0, 6, 852017, 0, 6, 786481, 0, 6, 720945, 0, 6, 720944, 0, 8, 720943, 0, 6, 786480, 0, 6, -65496, 0, 6, 40, 0, 6, 41, 0, 6, 65578, 0, 6, 65579, 0, 6, 131116, 0, 6, 131117, 0, 6, 131118, 0, 6, 196654, 0, 6, 262190, 0, 6, 262189, 0, 6, 327725, 0, 6, 327724, 0, 6, 327723, 0, 6, 327722, 0, 6, 327721, 0, 6, 393257, 0, 6, 393256, 0, 6, 393258, 0, 6, 393259, 0, 6, 393260, 0, 8, 393261, 0, 6, 393262, 0, 6, 393263, 0, 6, 393264, 0, 6, 458800, 0, 6, 524336, 0, 7, 589872, 0, 6, 655408, 0, 6, 655407, 0, 6, 720942, 0, 6, 720941, 0, 8, 720940, 0, 6, 720939, 0, 6, 720938, 0, 6, 720937, 0, 6, 720936, 0, 6, 655400, 0, 8, 589864, 0, 6, 524328, 0, 6, 458792, 0, 6, 458793, 0, 7, 327727, 0, 6, 262191, 0, 6, 327728, 0, 6, 393265, 0, 8, 458801, 0, 6, 524337, 0, 6, 589873, 0, 6, 655409, 0, 6, 655406, 0, 6, 655405, 0, 6, 655404, 0, 6, 655403, 0, 7, 655402, 0, 6, 655401, 0, 6, 589865, 0, 6, 524329, 0, 6, 458794, 0, 6, 458795, 0, 6, 458796, 0, 6, 458797, 0, 6, 458798, 0, 7, 458799, 0, 6, 327726, 0, 6, 524335, 0, 6, 589871, 0, 6, 589870, 0, 6, 589869, 0, 6, 589868, 0, 6, 589867, 0, 6, 589866, 0, 6, 524330, 0, 6, 524331, 0, 6, 524332, 0, 6, 524333, 0, 6, 524334, 0, 6, 196653, 0, 6, 196652, 0, 6, 131115, 0, 6, 131114, 0, 6, 131113, 0, 6, 65577, 0, 6, 65576, 0, 6, 131112, 0, 6, 262184, 0, 6, 262185, 0, 6, 327720, 0, 6, 196648, 0, 7, 196649, 0, 6, 196650, 0, 7, 196651, 0, 6, 262187, 0, 6, 262188, 0, 6, 262186, 0, 6, 393215, 0, 6, 393214, 0, 6, 393213, 0, 6, 393212, 0, 8, 393211, 0, 6, 393210, 0, 6, 393209, 0, 6, 393208, 0, 6, 458751, 0, 6, 524287, 0, 6, 589823, 0, 6, 589822, 0, 6, 589821, 0, 6, 589820, 0, 6, 589819, 0, 6, 589818, 0, 6, 589817, 0, 8, 524281, 0, 6, 524280, 0, 6, 458744, 0, 6, 458745, 0, 7, 458746, 0, 6, 458747, 0, 6, 458748, 0, 6, 458749, 0, 6, 458750, 0, 7, 524286, 0, 6, 524285, 0, 6, 524284, 0, 6, 524283, 0, 6, 524282, 0, 6, 589816, 0, 6, 524279, 0, 6, 458743, 0, 6, 393207, 0, 6, 589815, 0, 6, -262145, 0, 6, -196609, 0, 6, -131073, 0, 8, -65537, 0, 6, -1, 0, 6, -2, 0, 6, -3, 0, 6, -4, 0, 6, 65532, 0, 6, 65531, 0, 6, 131067, 0, 6, 131066, 0, 7, 131065, 0, 6, 196601, 0, 6, 196600, 0, 6, 262136, 0, 6, 262135, 0, 6, 327671, 0, 6, 327670, 0, 6, -65538, 0, 6, -65539, 0, 7, -65540, 0, 6, -65541, 0, 6, -6, 0, 6, -7, 0, 6, 65529, 0, 6, 65528, 0, 6, 131064, 0, 6, 131063, 0, 6, 196599, 0, 8, 196598, 0, 6, 262134, 0, 6, 65530, 0, 6, -5, 0, 6, -131074, 0, 6, -196610, 0, 6, -262146, 0, 6, -196611, 0, 6, -131075, 0, 6, -131076, 0, 6, -65542, 0, 8, -393215, 0, 6, -458751, 0, 6, -524287, 0, 6, -524288, 0, 6, -458752, 0, 6, -393216, 0, 8, -327681, 0, 6, -393177, 0, 7, -458713, 0, 6, -524249, 0, 6, -524250, 0, 6, -458714, 0, 6, -393178, 0, 6, 1376254, 0, 6, 1310718, 0, 6, 1245182, 131072, 6, 1310717, 0, 6, 1376253, 0, 6, 720895, 0, 6, 720894, 0, 6, 786430, 0, 6, 786429, 0, 6, 786428, 0, 6, 786427, 0, 6, 851963, 0, 6, 851962, 0, 6, 851961, 0, 6, 851960, 0, 6, 851959, 0, 6, 851958, 0, 6, 786422, 0, 6, 786421, 0, 6, 786420, 0, 7, 720884, 0, 6, 655348, 0, 6, 589812, 0, 6, 589813, 0, 6, 524277, 0, 7, 458741, 0, 6, 458742, 0, 6, 393206, 0, 6, 524278, 0, 6, 589814, 0, 6, 655350, 0, 6, 655349, 0, 6, 720885, 0, 6, 720886, 0, 7, 720887, 0, 6, 720888, 0, 6, 786425, 0, 6, 786426, 0, 6, 786424, 0, 6, 786423, 0, 6, 655351, 0, 6, 655352, 0, 6, 655357, 0, 6, 655358, 0, 6, 655359, 0, 6, 720892, 0, 6, 720891, 0, 7, 720890, 0, 6, 720889, 0, 6, 655353, 0, 6, 655354, 0, 6, 655356, 0, 6, 720893, 0, 8, 655355, 0, 6, 196597, 0, 6, 196596, 0, 6, 262132, 0, 6, 327668, 0, 6, 393204, 0, 6, 458740, 0, 6, 524276, 0, 6, 393205, 0, 6, 327669, 0, 7, 262133, 0, 6, 1310716, 0, 6, 1310715, 0, 6, 1310714, 0, 6, 1310713, 0, 6, 1310712, 0, 7, 1310711, 0, 6, 1310710, 0, 6, 1310709, 0, 6, 1310708, 0, 6, 1376244, 0, 6, 1376245, 0, 7, 1441781, 0, 6, 1441782, 0, 6, 1441783, 0, 6, 1441784, 0, 6, 1441785, 0, 6, 1441786, 0, 6, 1441787, 0, 6, 1376251, 0, 6, 1376250, 0, 6, 1376249, 0, 6, 1376248, 0, 6, 1376247, 0, 6, 1376246, 0, 6, 1441780, 0, 6, 1507319, 0, 8, 1507320, 0, 6, 1507321, 0, 6, 1507322, 0, 6, 1507323, 0, 6, 1572859, 0, 6, 1572860, 0, 7, 1638396, 0, 6, 1703932, 0, 8, 1769469, 0, 6, 1769468, 0, 6, 1769467, 0, 6, 1703931, 0, 6, 1703930, 0, 6, 1703929, 0, 6, 1638393, 0, 6, 1638392, 0, 6, 1638391, 0, 6, 1572855, 0, 6, 1572854, 0, 6, 1507318, 0, 6, 1572856, 0, 6, 1572857, 0, 7, 1572858, 0, 6, 1638394, 0, 6, 1638395, 0, 6, 851957, 0, 6, 851956, 0, 6, 917492, 0, 6, 983028, 0, 6, 1048564, 0, 6, 1114100, 0, 8, 1179636, 0, 6, 1245172, 0, 6, 1245183, 131072, 6, 1245181, 131072, 6, 1245180, 131072, 6, 1245179, 131072, 6, 1245178, 131072, 6, 1245177, 131072, 6, 1245176, 131072, 6, 1245175, 131072, 6, 1245174, 131072, 6, 1245173, 131072, 6, 327679, 131072, 6, 327678, 131072, 6, 327677, 131072, 6, 327676, 131072, 6, 327675, 131072, 6, 327674, 131072, 6, 327673, 131072, 6, 327672, 0, 6, -131032, 0, 7, 1114158, 131072, 6, 1114157, 131072, 6, 1114156, 131072, 6, 1114155, 131072, 6, 1114154, 131072, 6, 1114153, 131072, 6, 1114152, 131072, 6, 1638407, 131072, 6, 1638406, 131072, 6, 1638405, 131072, 6, 1638404, 131072, 6, 1638403, 131072, 6, 1638402, 131072, 6, 1638401, 131072, 6, 1638400, 131072, 6, 1638399, 196608, 6, 1572870, 589824, 5, 1572868, 655360, 5, 1572866, 655360, 4, 1572864, 655360, 7, 1572871, 720896, 6, 1572863, 655360, 5, 1179646, 720896, 5, 1179644, 655360, 4, 1179647, 589824, 4, 1179642, 589824, 6, 1179640, 589824, 5, 1179637, 720896, 4, 262143, 655360, 5, 262141, 655360, 4, 262138, 720896, 4, 262139, 655360, 6, 1048617, 720896, 6, 1048619, 589824, 5, 1048621, 720896, 5, 1048620, 655360, 5, 1048616, 655360, 5, 1114120, 720896, 5, 786464, 1179648, 10, 1310719, 0, 6, 1376255, 0, 6)

[node name="Player" parent="." instance=ExtResource("4_brax3")]
position = Vector2(168, 1104)

[node name="LandEnemy" parent="." instance=ExtResource("5_rtjp0")]
position = Vector2(1056, 600)

[node name="LandEnemy2" parent="." instance=ExtResource("6_dtmnt")]
position = Vector2(864, 544)

[node name="CrawlingEnemy" parent="." instance=ExtResource("7_gq6jw")]
position = Vector2(1704, 928)

[node name="WalkingEnemy" parent="." instance=ExtResource("8_8u4y2")]
position = Vector2(992, 1120)

[node name="Exit" parent="." instance=ExtResource("10_ci7ti")]
position = Vector2(288, 304)

[node name="OutOfBounds" type="StaticBody2D" parent="."]
position = Vector2(880, 1344)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBounds"]
position = Vector2(456, -48)
shape = SubResource("RectangleShape2D_b0c0l")

[node name="Spike1" type="AnimatedSprite2D" parent="."]
light_mask = 0
position = Vector2(672, 1272)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_p87w7")
animation = &"spike"
frame_progress = 0.343202

[node name="Spike2" type="AnimatedSprite2D" parent="."]
light_mask = 0
position = Vector2(736, 1272)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_dk22r")
animation = &"spike"
frame_progress = 0.866142

[node name="Spike3" type="AnimatedSprite2D" parent="."]
position = Vector2(800, 1272)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_rsyn7")
animation = &"spike"

[node name="Spike4" type="AnimatedSprite2D" parent="."]
position = Vector2(864, 1272)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_fsmfh")
animation = &"spike"
frame_progress = 0.521911

[node name="Spike5" type="AnimatedSprite2D" parent="."]
position = Vector2(928, 1272)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_u3ns7")
animation = &"spike"
frame_progress = 0.408169

[node name="Spike6" type="AnimatedSprite2D" parent="."]
position = Vector2(1056, 1272)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_j86t1")
animation = &"spike"

[node name="Spike7" type="AnimatedSprite2D" parent="."]
position = Vector2(1120, 1272)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_ghtud")
animation = &"spike"

[node name="Spike8" type="AnimatedSprite2D" parent="."]
position = Vector2(1184, 1272)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_dwoul")
animation = &"spike"

[node name="Spike9" type="AnimatedSprite2D" parent="."]
position = Vector2(1248, 1272)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_g1eyq")
animation = &"spike"

[connection signal="changeScene" from="Player" to="." method="_on_player_change_scene"]
[connection signal="readyToLeave" from="Player" to="." method="_on_player_ready_to_leave"]
